--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ jwt_secret=fdtasgyfkdskfhasu_415234
 #periodo di validita del token(s) 2h = 7200000 ms
 jwt.expiration: 7200000
 
+server.port=808o
 debug=false
 logging.level.org.springframework.security=INFO
 spring.websecurity.debug=false
